--- a/app/src/main/res/layout/activity_product_search.xml
+++ b/app/src/main/res/layout/activity_product_search.xml
@@ -32,7 +32,7 @@
                         android:id="@+id/product_search_bar_home"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:backgroundTint="@color/transparent"
+                        android:backgroundTint="@android:color/transparent"
                         android:contentDescription="@string/voltar"
                         android:src="@drawable/ic_back"/>
 
@@ -55,7 +55,7 @@
                         android:id="@+id/product_search_bar_done"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:backgroundTint="@color/transparent"
+                        android:backgroundTint="@android:color/transparent"
                         android:contentDescription="@string/pesquisar"
                         android:src="@drawable/ic_search_small"
                         android:visibility="@{viewModel.searching ? View.GONE : View.VISIBLE}"/>
