--- a/app/src/main/res/layout/activity_sale_form.xml
+++ b/app/src/main/res/layout/activity_sale_form.xml
@@ -230,7 +230,7 @@
 
                             <LinearLayout
                                     android:layout_width="match_parent"
-                                    android:layout_height="@dimen/search_bar_search_input_left_margin"
+                                    android:layout_height="20dp"
                                     android:gravity="center"
                                     android:background="@color/colorPrimary">
 
