--- a/app/src/main/res/layout/fragment_customer_adapter.xml
+++ b/app/src/main/res/layout/fragment_customer_adapter.xml
@@ -33,13 +33,13 @@
         <RelativeLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
-                android:paddingTop="@dimen/search_view_corner_radius">
+                android:paddingTop="@dimen/btn_adapter_padding">
 
             <ImageButton
                     android:id="@+id/customer_adapter_menu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/transparent"
+                    android:backgroundTint="@android:color/transparent"
                     android:src="@drawable/ic_dots"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentTop="true"/>
