--- a/app/src/main/res/layout/fragment_resources.xml
+++ b/app/src/main/res/layout/fragment_resources.xml
@@ -5,15 +5,58 @@
              android:layout_height="match_parent"
              android:background="@color/white_opaque"
              android:orientation="vertical"
+             android:padding="@dimen/tiny_margin"
              tools:context=".view.fragment.ResourcesFragment">
 
-    <ListView
-            android:id="@+id/list_resources"
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/tiny_margin"
-            android:background="@color/white_opaque"
-            android:divider="@null"
-            android:dividerHeight="@dimen/very_tiny_margin" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        <include android:id="@+id/fragment_res_people"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_weight="1"
+                 layout="@layout/fragment_resources_adapter"/>
+
+        <include android:id="@+id/fragment_res_sale"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_weight="1"
+                 layout="@layout/fragment_resources_adapter"/>
+
+        <include android:id="@+id/fragment_res_product"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_weight="1"
+                 layout="@layout/fragment_resources_adapter"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        <include android:id="@+id/fragment_res_color"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_weight="1"
+                 layout="@layout/fragment_resources_adapter"/>
+
+        <include android:id="@+id/fragment_res_financial_release"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_weight="1"
+                 layout="@layout/fragment_resources_adapter"/>
+
+        <include android:id="@+id/fragment_res_order"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_weight="1"
+                 layout="@layout/fragment_resources_adapter"
+                android:visibility="invisible"/>
+
+    </LinearLayout>
 
 </LinearLayout>
