--- a/app/src/main/res/layout/fragment_resources_adapter.xml
+++ b/app/src/main/res/layout/fragment_resources_adapter.xml
@@ -1,49 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:clipToPadding="false"
+        android:gravity="center"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/very_tiny_margin"
+        android:paddingBottom="@dimen/small_margin"
         android:paddingLeft="@dimen/tiny_margin"
         android:paddingRight="@dimen/tiny_margin"
-        android:paddingTop="@dimen/very_tiny_margin">
+        android:paddingTop="@dimen/small_margin">
 
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:elevation="@dimen/elevation">
+            android:layout_height="wrap_content"
+            android:elevation="@dimen/elevation"
+            app:cardCornerRadius="@dimen/small_margin">
 
 
         <LinearLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="@dimen/small_margin"
-                android:orientation="horizontal">
+                android:layout_gravity="center"
+                android:paddingBottom="@dimen/large_margin"
+                android:paddingTop="@dimen/large_margin"
+                android:orientation="vertical">
 
             <ImageView android:id="@+id/main_resources_img"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/small_margin"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
                     android:contentDescription="@string/cliente"
                     android:src="@drawable/ic_people"/>
 
-            <LinearLayout android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:paddingTop="@dimen/tiny_margin"
-                    android:orientation="vertical">
-
-                <TextView android:id="@+id/main_resources_title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"/>
-
-                <TextView android:id="@+id/main_resources_description"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-
-            </LinearLayout>
+            <TextView android:id="@+id/main_resources_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:ellipsize="end"
+                    android:paddingTop="@dimen/small_margin"
+                    android:scrollHorizontally="true"
+                    android:textStyle="bold"/>
 
         </LinearLayout>
 
