--- a/app/src/main/res/layout/fragment_sale_adapter.xml
+++ b/app/src/main/res/layout/fragment_sale_adapter.xml
@@ -47,7 +47,7 @@
                     android:id="@+id/sale_adapter_menu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/transparent"
+                    android:backgroundTint="@android:color/transparent"
                     android:src="@drawable/ic_dots"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentTop="true"/>
