--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="elevation">5dp</dimen>
     <dimen name="toolbar_padding">24dp</dimen>
     <dimen name="spinner_label_margin_bottom">4.75dp</dimen>
+    <dimen name="btn_adapter_padding">4dp</dimen>
 </resources>
